[danjie] feat: complete the second part(without icon-yinhao)& remove pics to new folders

--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link type= "text/css" rel="stylesheet" href="./index.css">
-    </head>
 
-    <body style="text-align: center;">
-        <div class="bg">
-            <div class="part-title">
-                第一部分：text-shadow的使用
-            </div>
+<head>
+    <link type="text/css" rel="stylesheet" href="./static/styles/index.css">
+    <link type="text/css" rel="stylesheet" href="./static/styles/iconfont.css">
+</head>
+
+<body style="text-align: center;">
+    <div class="bg">
+        <div class="part-title">
+            第一部分：text-shadow的使用
+        </div>
         <div class="big-word">CSS3 实战练习</div>
         <div class="part-title">
             第二部分: @font-face 和 渐变的使用
         </div>
         <div class="letter-page">
+            <p>
+                <i class="iconfont iconfont-yinhao"></i>
+                Dream what you want to dream; go where you want to go;
+                be what you want to be, because you have only one life
+                and one chance to do all the things you want to do.
+                <i class="iconfont iconfont-quotation"></i>
+            </p>
+        </div>
+        <div class="part-title">
+            第三部分：弹性布局、伪类选择器、变形的使用。
+        </div>
+        <div class="article-list">
+            <div class="articles first-article">
 
+            </div>
+            <div class="articles second-article">
+
+            </div>
+            <div class="articles third-article">
+
+            </div>
         </div>
-        </div>
-    </body>
+    </div>
+</body>
+
 </html>
