[danjie] feat: complete part 4 multi-layout-mudule.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style="text-align: center;">
     <div class="bg">
-        <div class="part-title">
+        <div class="part-title" style="top: 30px; margin-top: 0;">
             第一部分：text-shadow的使用
         </div>
         <div class="big-word">CSS3 实战练习</div>
@@ -17,11 +17,11 @@
         </div>
         <div class="letter-page">
             <p>
-                <i class="iconfont iconfont-yinhao"></i>
+                <i class="iconfont icon-yinhao"></i>
                 Dream what you want to dream; go where you want to go;
                 be what you want to be, because you have only one life
                 and one chance to do all the things you want to do.
-                <i class="iconfont iconfont-quotation"></i>
+                <i class="iconfont icon-quotation"></i>
             </p>
         </div>
         <div class="part-title">
@@ -29,15 +29,61 @@
         </div>
         <div class="article-list">
             <div class="articles first-article">
-
+                <div class="content first-content">
+                    <h4 class="content-title">EMPIRE STATE</h4>
+                    <p>
+                        A cool description of some sort between this tags.
+                        I am so cool and awesomely awesome.
+                    </p>
+                    <div class="link-button">
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
             </div>
             <div class="articles second-article">
-
+                <div class="content second-content">
+                    <div class="black-box-background"></div>
+                    <h4 class="content-title content-underline">MIDTOWN</h4>
+                    <p>
+                        A description of some sort between this tags.
+                        I am so cool and awesomely awesome.
+                    </p>
+                    <div class="link-button">
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
             </div>
             <div class="articles third-article">
-
+                <div class="content third-content">
+                    <h4 class="content-title content-underline">THE ONLY LIVING BOY IN NOW YORK</h4>
+                    <p>
+                        Words and such, a whole lot more of muh flippin' words.
+                    </p>
+                    <div class="link-button">
+                        <a href="#">READ MORE</a>
+                    </div>
+                </div>
             </div>
+            
+
         </div>
+        <div class="part-title">
+                第四部分：Multi-column Layout Module的应用。
+            </div>
+            <div class="multi-layout-module">
+                    <p>
+                            Lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                          </p>
+                          <p>
+                                Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                          </p>
+                          <p>
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                          </p>
+                          <p>
+                                Excepteur sint occaecat cupidatat non prodent,suntin culpa qui officia deserunt mollit anim id est laborum.
+                          </p>
+            </div>
     </div>
 </body>
 
