[danjie] refractor: change the wrong name & merge CSS things.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,11 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./static/styles/index.css">
     <link type="text/css" rel="stylesheet" href="./static/styles/iconfont.css">
+    <meta charset="UTF-8">
 </head>
 
-<body style="text-align: center;">
-    <div class="bg">
-        <div class="part-title" style="top: 30px; margin-top: 0;">
-            第一部分：text-shadow的使用
-        </div>
-        <div class="big-word">CSS3 实战练习</div>
-        <div class="part-title">
-            第二部分: @font-face 和 渐变的使用
-        </div>
+<body>
+        <div class="poster-title">CSS3 实战练习</div>
         <div class="letter-page">
             <p>
                 <i class="iconfont icon-yinhao"></i>
@@ -24,12 +18,9 @@
                 <i class="iconfont icon-quotation"></i>
             </p>
         </div>
-        <div class="part-title">
-            第三部分：弹性布局、伪类选择器、变形的使用。
-        </div>
         <div class="article-list">
-            <div class="articles first-article">
-                <div class="content first-content">
+            <div class="articles empire-state">
+                <div class="content article-content">
                     <h4 class="content-title">EMPIRE STATE</h4>
                     <p>
                         A cool description of some sort between this tags.
@@ -40,8 +31,8 @@
                     </div>
                 </div>
             </div>
-            <div class="articles second-article">
-                <div class="content second-content">
+            <div class="articles midtown">
+                <div class="content article-content">
                     <div class="black-box-background"></div>
                     <h4 class="content-title content-underline">MIDTOWN</h4>
                     <p>
@@ -53,8 +44,8 @@
                     </div>
                 </div>
             </div>
-            <div class="articles third-article">
-                <div class="content third-content">
+            <div class="articles new-york">
+                <div class="content article-content">
                     <h4 class="content-title content-underline">THE ONLY LIVING BOY IN NOW YORK</h4>
                     <p>
                         Words and such, a whole lot more of muh flippin' words.
@@ -64,13 +55,8 @@
                     </div>
                 </div>
             </div>
-            
-
         </div>
-        <div class="part-title">
-                第四部分：Multi-column Layout Module的应用。
-            </div>
-            <div class="multi-layout-module">
+            <div class="french-article">
                     <p>
                             Lorem ipsum dolor sit amet,consectetur adipisicing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                           </p>
@@ -84,7 +70,6 @@
                                 Excepteur sint occaecat cupidatat non prodent,suntin culpa qui officia deserunt mollit anim id est laborum.
                           </p>
             </div>
-    </div>
 </body>
 
 </html>
